--- a/javascript/passenger_counter/index.html
+++ b/javascript/passenger_counter/index.html
@@ -9,6 +9,7 @@
         <!-- Increment button -->
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
+        <p id="save-el">Previous entries: </p>
         <script src="index.js"></script>
     </body>
 </html>
