--- a/javascript/passenger_counter/index.html
+++ b/javascript/passenger_counter/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+      
+        <title>Workout Reps Counter</title>
+
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>People entered: </h1>
-        <h2 id="count-el">0</h2>
-        <!-- Increment button -->
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
-        <script src="index.js"></script>
+        <div>
+            <h1>Workout Reps: </h1>
+            <h2 id="count-el">0</h2>
+            <!-- Increment button -->
+            <button id="increment-btn" onclick="increment()">INCREMENT</button>
+            <button id="save-btn" onclick="save()">SAVE</button>
+            <p id="save-el">Previous Reps: </p>
+            <script src="index.js"></script>
+        </div>
     </body>
 </html>
