--- a/javascript/blackjack/index.html
+++ b/javascript/blackjack/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <title>Blackjack Game</title>
         <link rel="stylesheet" href="style.css">
 
     </head>
@@ -10,6 +13,7 @@
         <p id="sum-el">Sum: </p>
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
         <script src="index.js"></script>
     </body>
 </html>
