--- a/javascript/for_later/index.html
+++ b/javascript/for_later/index.html
@@ -5,9 +5,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!-- Create an input element with type="text" and id="input-el" -->
-        <input type="text" id="input-el">
-        <!-- Create a SAVE INPUT button with id="input-btn" -->
+        <p>Hey there! Saving a page for later?</p>
+        <input type="text" id="input-el" autofocus/>
         <button id="input-btn">SAVE INPUT</button>
         <button id="tab-btn">SAVE TAB</button>
         <button id="delete-btn">DELETE ALL</button>
